--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,20 +36,26 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'com.google.firebase:firebase-database:19.6.0'
-    implementation 'com.google.firebase:firebase-auth:20.0.2'
+    implementation 'com.google.firebase:firebase-auth:20.0.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.google.firebase:firebase-storage:19.2.1'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'com.google.android.material:material:1.3.0'
     implementation 'com.hbb20:ccp:2.3.1'
     implementation 'com.chaos.view:pinview:1.4.3'
     implementation 'androidx.browser:browser:1.3.0'
+    implementation 'com.github.GrenderG:Toasty:1.4.2'
+    implementation 'com.github.arcadefire:nice-spinner:1.4.4'
+    implementation 'com.github.jakebonk:NotifyMe:1.0.1'
+    implementation 'ca.antonious:materialdaypicker:0.7.4'
+    implementation 'com.jaredrummler:material-spinner:1.3.1'
+    implementation 'com.firebaseui:firebase-ui-database:7.1.1'
 
-    implementation 'com.ismaeldivita.chipnavigation:chip-navigation-bar:1.3.2'
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.4.10'
+    implementation 'com.ismaeldivita.chipnavigation:chip-navigation-bar:1.3.4'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.4.31'
 
 
 
