--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,15 +17,16 @@
         android:required="true" />
 
     <application
+        android:name=".Covid.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MediPlus"
-        tools:node="merge"
-        android:name=".Covid.MyApplication" >
-        <activity android:name=".Login"></activity>
+        tools:node="merge">
+        <activity android:name=".Patient.CovidTest"></activity>
+        <activity android:name=".Login" />
         <activity android:name=".Patient.Callback" />
         <activity android:name=".Patient.CovidCare" />
         <activity android:name=".Patient.Reminder" />
@@ -44,9 +45,7 @@
         <activity android:name=".appointment.AppointmentsActivity" />
         <activity android:name=".appointment.SearchDoctorSpecialityActivity" />
         <activity android:name=".appointment.SearchDoctorActivity" />
-
         <activity android:name=".Covid.user.quiz.TestResult" />
-
         <activity android:name=".Covid.doctor.MainActivityDoctor" />
         <activity android:name=".Covid.user.statistics.AffectedCountries" />
         <activity android:name=".Covid.user.statistics.DetailsCountry" />
